Added Vulkan and glm dependencies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ execute_process(
 )
 
 if(DEFINED ENV{VCPKG_ROOT})
-    set(VCPKG_PACKAGES "sdl2" "boost-utility" "catch2")
+    set(VCPKG_PACKAGES "sdl2[core,vulkan]" "glm" "Vulkan" "boost-utility" "catch2")
 
     execute_process(COMMAND "$ENV{VCPKG_ROOT}/vcpkg" "install" ${VCPKG_PACKAGES})
 endif()
@@ -48,12 +48,18 @@ find_path(ENTT_INCLUDE_PATH entt/entt.hpp
 # setup sdl2 dependency
 find_package(SDL2 CONFIG REQUIRED)
 
+# setup glm dependency
+find_package(glm CONFIG REQUIRED)
+
+# setup vulkan dependency
+find_package(Vulkan REQUIRED)
+
 file(GLOB_RECURSE SOURCES "src/*.cpp" "src/*.c")
 
 # add the executable
 add_executable(DbKrPlatformFighter ${SOURCES})
 target_include_directories(DbKrPlatformFighter PRIVATE ${ENTT_INCLUDE_PATH})
-target_link_libraries(DbKrPlatformFighter PRIVATE Boost::headers SDL2::SDL2 SDL2::SDL2main GGPO)
+target_link_libraries(DbKrPlatformFighter PRIVATE Boost::headers SDL2::SDL2 SDL2::SDL2main GGPO glm Vulkan::Vulkan)
 
 add_custom_command(TARGET DbKrPlatformFighter
     POST_BUILD
